@@ -1,6 +1,5 @@
 package net.jadoth.persistence.internal;
 
-import static java.lang.System.identityHashCode;
 import static net.jadoth.X.KeyValue;
 
 import java.lang.ref.WeakReference;
@@ -12,6 +11,8 @@ import net.jadoth.collections.types.XGettingTable;
 import net.jadoth.hashing.HashStatisticsBucketBased;
 import net.jadoth.hashing.XHashing;
 import net.jadoth.math.XMath;
+import net.jadoth.meta.XDebug;
+import net.jadoth.persistence.exceptions.PersistenceExceptionConsistencyObject;
 import net.jadoth.persistence.exceptions.PersistenceExceptionConsistencyObjectId;
 import net.jadoth.persistence.exceptions.PersistenceExceptionInvalidObjectRegistryCapacity;
 import net.jadoth.persistence.exceptions.PersistenceExceptionNullObjectId;
@@ -22,6 +23,21 @@ import net.jadoth.typing.KeyValue;
 
 public final class DefaultObjectRegistry implements PersistenceObjectRegistry
 {
+	/* Notes on byte size per entry (+/- COOPS):
+	 * - An Entry instance occupies 48/80 bytes (12/16 bytes header, 4 references, 1 long, 1 int, 2 references).
+	 * - With hash density 1.0, every entry also occupies 2 additional references (8/16 bytes) in the hash tables.
+	 * 
+	 * Conclusion:
+	 * The major memory eater is the rather big JDK WeakReference implementation.
+	 * Increasing the hash density up to 16.0 can be reasonable to minimize the implementation's memory consumption.
+	 * Blame the rest on the JDK.
+	 * 
+	 * Hash Density values (+/- COOPS):
+	 * 0.75f: 60/104 bytes per entry, 110% performance.
+	 * 1.00f: 56/ 96 bytes per entry, 100% performance.
+	 * 2.00f: 52/ 88 bytes per entry,  80% performance.
+	 */
+
 	/* (27.11.2018 TM)TODO: ObjectRegistry housekeeping thread
 	 * - tryCleanUp() method to random-sample-check for trimmable buckets arrays (empty buckets and/or orphans)
 	 * - thread with weak back-reference to this registry to make it stop automatically.
@@ -31,38 +47,6 @@ public final class DefaultObjectRegistry implements PersistenceObjectRegistry
 	 * - start() and stop() method in the registry for explicit control.
 	 * - a size increase ensures the thread is running, any clear/truncate terminates it.
 	 */
-	
-	/* Funny find:
-	 * http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=4990451
-	 * Welcome to this user code class.
-	 */
-	
-	/* Notes on byte size per entry (+/- COOPS):
-	 * - Entry instances occupy 40/64 bytes, including memory padding (12/16 bytes header, 4 references, 1 long, 1 int)
-	 * - The hash density specifies the average length of the buckets array in a hash table slot.
-	 * - Arrays have a header length of 16/24 bytes.
-	 * - All entries in one buckets array share the array's total length and the two hash table slots.
-	 * 
-	 * Conclusion:
-	 * The major memory eater is the rather big JDK WeakReference implementation.
-	 * Increasing the hash density up to 16.0 can be reasonable to minimize the implementation's memory consumption.
-	 * Blame the rest on the JDK.
-	 * 
-	 * Hash   |  bytes/entry  | Perf.
-	 * density| +COOPS -COOPS |estim.
-	 * ------------------------------
-	 * ^ anything above is ridiculous
-	 *  16,00 |  57,50  84,00 | ~ 55%
-	 *   8,00 |  59,00  88,00 | ~ 65%
-	 *   4,00 |  62,00  96,00 | ~ 70%
-	 *   3,20 |  63,50 100,00 | ~ 75%
-	 *   2,00 |  68,00 112,00 | ~ 80%
-	 *   1,60 |  71,00 120,00 | ~ 85%
-	 *   1,00 |  80,00 144,00 | =100%
-	 *   0,80 |  86,00 160,00 | ~105%
-	 *   0,50 | 104,00 208,00 | ~110%
-	 * v anything below is ridiculous
-	 */
 
 	///////////////////////////////////////////////////////////////////////////
 	// constants        //
@@ -71,6 +55,11 @@ public final class DefaultObjectRegistry implements PersistenceObjectRegistry
 	public static final float defaultHashDensity()
 	{
 		return 1.0f;
+	}
+	
+	static final int hash(final Object object)
+	{
+		return System.identityHashCode(object);
 	}
 
 
@@ -122,13 +111,10 @@ public final class DefaultObjectRegistry implements PersistenceObjectRegistry
 	}
 
 	/**
-	 * Note on hashDensity:
-	 * Values < 1.0 are hardly worth it.
-	 * Values from 1.6 to 8.0 can be a reasonable trade of less memory consumption for acceptably lower performance.
-	 * Anything above 16.0 or below 0.5 is ridiculous.
+	 * Note on hashDensity: Reasonable values are within [0.75; 2.00].
 	 * 
-	 * @param slotSize
-	 * @param hashDensity.
+	 * @param hashDensity
+	 * @param minimumCapacity
 	 * @return
 	 */
 	public static DefaultObjectRegistry New(
@@ -151,13 +137,13 @@ public final class DefaultObjectRegistry implements PersistenceObjectRegistry
 	// instance fields //
 	////////////////////
 	
-	private Entry[][] oidHashTable;
-	private Entry[][] refHashTable;
-	private int       hashRange   ; // bit mask / modulo value used for hashing.
-	private float     hashDensity ; // average number of buckets per hash table slot for well-distributed hash values.
-	private long      capacity    ; // upper rebuild threshold.
-	private long      minCapacity ; // minimum capacity
-	private long      size        ;
+	private Entry[] oidHashTable;
+	private Entry[] refHashTable;
+	private int     hashRange   ; // bit mask / modulo value used for hashing.
+	private float   hashDensity ; // average number of buckets per hash table slot for well-distributed hash values.
+	private long    capacity    ; // upper rebuild threshold.
+	private long    minCapacity ; // minimum capacity
+	private long    size        ;
 	
 	// integrated special constants registry
 	private EqHashTable<Long, Object> constantsHotRegistry = EqHashTable.New();
@@ -180,52 +166,10 @@ public final class DefaultObjectRegistry implements PersistenceObjectRegistry
 	///////////////////////////////////////////////////////////////////////////
 	// methods //
 	////////////
-	
-	@Override
-	public final synchronized DefaultObjectRegistry Clone()
-	{
-		return DefaultObjectRegistry.New(this.hashDensity, this.minCapacity);
-	}
 
-	@Override
-	public final synchronized int hashRange()
-	{
-		return this.oidHashTable.length;
-	}
-	
 	private int internalHashLength()
 	{
 		return this.hashRange + 1;
-	}
-
-	@Override
-	public final synchronized float hashDensity()
-	{
-		return this.hashDensity;
-	}
-	
-	@Override
-	public final synchronized long minimumCapacity()
-	{
-		return this.minCapacity;
-	}
-
-	@Override
-	public final synchronized long capacity()
-	{
-		return this.capacity;
-	}
-
-	@Override
-	public final synchronized long size()
-	{
-		return this.size;
-	}
-
-	@Override
-	public final synchronized boolean isEmpty()
-	{
-		return this.size == 0;
 	}
 	
 	private void internalSetHashDensity(final float validHashDensity)
@@ -237,63 +181,6 @@ public final class DefaultObjectRegistry implements PersistenceObjectRegistry
 	{
 		this.minCapacity = validMinimumCapacity;
 	}
-	
-	@Override
-	public synchronized boolean setHashDensity(final float hashDensity)
-	{
-		this.internalSetHashDensity(validateHashDensity(hashDensity));
-		
-		this.internalUpdateCapacities();
-		return this.ensureCapacity(this.minCapacity);
-	}
-	
-	@Override
-	public final synchronized boolean setConfiguration(
-		final float hashDensity    ,
-		final long  minimumCapacity
-	)
-	{
-		// both values are checked before modifying any state
-		validateHashDensity(hashDensity);
-		validateCapacity(minimumCapacity);
-		
-		this.internalSetHashDensity(hashDensity);
-		this.internalSetMinimumCapacity(minimumCapacity);
-		
-		this.internalUpdateCapacities();
-		return this.ensureCapacity(minimumCapacity);
-	}
-	
-	@Override
-	public final synchronized boolean setMinimumCapacity(final long minimumCapacity)
-	{
-		this.internalSetMinimumCapacity(validateCapacity(minimumCapacity));
-		
-		this.internalUpdateCapacities();
-		return this.ensureCapacity(minimumCapacity);
-	}
-	
-	@Override
-	public final synchronized boolean ensureCapacity(final long desiredCapacity)
-	{
-		/*
-		 * Cannot use capacityHigh here, as this method is called after changing capacity-defining values.
-		 * Instead, the actual hash length is checked to determine if the tables really are too small.
-		 */
-		
-		validateCapacity(desiredCapacity);
-		final int requiredHashLength = this.calculateRequiredHashLength(desiredCapacity);
-		if(requiredHashLength > this.internalHashLength())
-		{
-			this.synchRebuild(requiredHashLength);
-			
-			return true;
-		}
-		
-		return false;
-	}
-	
-	
 	
 	final DefaultObjectRegistry internalSetConfiguration(
 		final float hashDensity    ,
@@ -328,261 +215,117 @@ public final class DefaultObjectRegistry implements PersistenceObjectRegistry
 		return XHashing.padHashLength((long)(minimumCapacity / this.hashDensity));
 	}
 		
-	private void setHashTables(final Entry[][] oidHashTable, final Entry[][] refHashTable)
+	private void setHashTables(final Entry[] oidHashTable, final Entry[] refHashTable)
 	{
 		this.oidHashTable = oidHashTable;
 		this.refHashTable = refHashTable;
 		this.hashRange    = oidHashTable.length - 1;
-		this.internalUpdateCapacities();
+		this.internalUpdateCapacity();
 	}
 		
-	private Entry[][] createHashTable(final int hashLength)
+	private Entry[] createHashTable(final int hashLength)
 	{
-		return new Entry[hashLength][(int)Math.ceil(this.hashDensity)];
+		return new Entry[hashLength];
 	}
 	
-	private void internalUpdateCapacities()
+	private void internalUpdateCapacity()
 	{
 		this.capacity = this.internalHashLength() >= XMath.highestPowerOf2_int()
 			? Long.MAX_VALUE
 			: (long)(this.internalHashLength() * this.hashDensity)
 		;
 	}
-
-	private synchronized boolean synchronizedAdd(final long objectId, final Object object)
-	{
-		/* (07.12.2018 TM)XXX: Use simple hash chain
-		 * When the lookups have to use the entry instances, anyway, the hash chain
-		 * can be built directly by them, without an intermediate array.
-		 * The memory requirement for the references stay the same, but the array header would be omitted.
-		 * Memory consumption would almost stay the same for different hash densities (-> test)
-		 * Also better registration (maybe even bugfix):
-		 * - check for existing oid. If yes, check consistent reference, update or exception, etc.
-		 * - if not, register by object, first.
-		 * - if an entry already holds that object, then consistency exception.
-		 *   (because if it were a consistent entry, the oid lookup would already have found it.)
-		 * - if no entry holds that object, add new entry
-		 * - check refHash first to avoid costly referent lookups. because that case should actually never happen anyway
-		 */
 		
-		/* (07.12.2018 TM)FIXME: superfluous synchronized?
-		 * Could it be that making this implementation explicitely synchronized is superfluous?
-		 * Because:
-		 * - The calling context must explicitely lock it, anyway. E.g. lock it, check instance, assign oid, register.
-		 * - The methods don't consist of complex parts where one can be un-synchronized. It's always the whole thing.
-		 */
-		
-		if(this.synchAddCheck(objectId, object))
-		{
-			return false;
-		}
-
-		synchInsertEntry(this.oidHashTable, this.refHashTable, new Entry(objectId, object), this.hashRange);
-
-		if(++this.size >= this.capacity)
-		{
-			this.synchIncreaseStorage();
-		}
-
-		return true;
-	}
-	
-	private boolean synchAddCheck(final long objectId, final Object object)
+	@Override
+	public final synchronized DefaultObjectRegistry Clone()
 	{
-		final Entry[] oidBuckets;
-		if((oidBuckets = this.oidHashTable[(int)objectId & this.hashRange]) != null)
-		{
-			for(int i = 0; i < oidBuckets.length; i++)
-			{
-				if(oidBuckets[i] != null && oidBuckets[i].objectId == objectId)
-				{
-					this.synchHandleExisting(i, objectId, object, oidBuckets[i]);
-					return true;
-				}
-			}
-		}
-		
-		return false;
-	}
-	
-	private void synchHandleExisting(
-		final int    oidIndex,
-		final long   oid     ,
-		final Object object  ,
-		final Entry  entry
-	)
-	{
-		if(entry.get() == object)
-		{
-			return;
-		}
-
-		validateReferenceNotYetRegistered(this.refHashTable[identityHashCode(object) & this.hashRange], oid, object);
-
-		remove(this.refHashTable[entry.refHash & this.hashRange], entry);
-
-		final Entry newEntry = this.oidHashTable[(int)oid & this.hashRange][oidIndex] = new Entry(oid, object);
-		synchPutEntry(this.refHashTable, newEntry.refHash & this.hashRange, newEntry);
-	}
-	
-	private static void validateReferenceNotYetRegistered(
-		final Entry[] refBuckets,
-		final long    objectId  ,
-		final Object  object
-	)
-	{
-		if(refBuckets != null)
-		{
-			for(int i = 0; i < refBuckets.length; i++)
-			{
-				if(refBuckets[i] != null && refBuckets[i].get() == object)
-				{
-					validateEntryOid(refBuckets[i], objectId, object);
-					return;
-				}
-			}
-		}
-	}
-	
-	private static void remove(final Entry[] buckets, final Entry entry)
-	{
-		for(int i = 0; i < buckets.length; i++)
-		{
-			if(buckets[i] == entry)
-			{
-				buckets[i] = null;
-				return;
-			}
-		}
-	}
-
-	private synchronized Object synchronizedAddGet(final long objectId, final Object object)
-	{
-		final Object alreadyRegistered;
-		if((alreadyRegistered = this.synchAddGetCheck(objectId, object)) != null)
-		{
-			return alreadyRegistered;
-		}
-
-		synchInsertEntry(this.oidHashTable, this.refHashTable, new Entry(objectId, object), this.hashRange);
-
-		if(++this.size >= this.capacity)
-		{
-			this.synchIncreaseStorage();
-		}
-
-		return object;
-	}
-	
-	private Object synchAddGetCheck(final long objectId, final Object object)
-	{
-		final Entry[] oidBuckets;
-		if((oidBuckets = this.oidHashTable[(int)objectId & this.hashRange]) != null)
-		{
-			for(int i = 0; i < oidBuckets.length; i++)
-			{
-				if(oidBuckets[i] != null && oidBuckets[i].objectId == objectId)
-				{
-					final Object registered;
-					if((registered = oidBuckets[i].get()) != null)
-					{
-						return registered == object
-							? null
-							: registered
-						;
-					}
-					this.synchHandleExisting(i, objectId, registered, oidBuckets[i]);
-					return true;
-				}
-			}
-		}
-		
-		return false;
-	}
-
-	private void synchIncreaseStorage()
-	{
-		// capacityHighBound checks prevent unnecessary / dangerous calls of this method
-		this.synchRebuild(this.oidHashTable.length << 1);
-	}
-	
-	private void synchRebuild(final int hashLength)
-	{
-		final Entry[][] newSlotsPerOid = this.createHashTable(hashLength);
-		final Entry[][] newSlotsPerRef = this.createHashTable(hashLength);
-
-		synchRebuildSlots(this.oidHashTable, newSlotsPerOid, newSlotsPerRef);
-
-		this.setHashTables(newSlotsPerOid, newSlotsPerRef);
-		
-		// at some point, constant registration is completed, so an efficient storage form is preferable.
-		this.synchEnsureConstantsColdStorage();
+		return DefaultObjectRegistry.New(this.hashDensity, this.minCapacity);
 	}
 
 	@Override
-	public synchronized boolean consolidate()
+	public final synchronized int hashRange()
 	{
-		// both tables always have the same length
-		final Entry[][] oidHashTable = this.oidHashTable;
-		final Entry[][] refHashTable = this.refHashTable;
-		
-		int size = 0;
-		for(int h = 0; h < oidHashTable.length; h++)
-		{
-			// the primary branch (per oids) is used to determine the size
-			size += synchCleanUpBucket(oidHashTable, h);
-			
-			// the secondard branch is just updated
-			synchCleanUpBucket(refHashTable, h);
-		}
-		
-		this.size = size;
-		
-		return this.synchCheckForDecrease();
+		return this.oidHashTable.length;
+	}
+
+	@Override
+	public final synchronized float hashDensity()
+	{
+		return this.hashDensity;
 	}
 	
-	private static int synchCleanUpBucket(final Entry[][] hashTable, final int h)
+	@Override
+	public final synchronized long minimumCapacity()
 	{
-		final Entry[] buckets = hashTable[h];
-		if(buckets == null)
-		{
-			return 0;
-		}
-		
-		int entryCount = 0;
-		for(int i = 0; i < buckets.length; i++)
-		{
-			if(buckets[i] != null && buckets[i].get() != null)
-			{
-				entryCount++;
-			}
-		}
-		
-		if(entryCount == 0)
-		{
-			hashTable[h] = null;
-			return 0;
-		}
-		
-		final Entry[] newBuckets = new Entry[entryCount];
-		int t = 0;
-		for(int i = 0; i < buckets.length; i++)
-		{
-			if(buckets[i] != null && buckets[i].get() != null)
-			{
-				newBuckets[t++] = buckets[i];
-			}
-		}
-		
-		return t;
+		return this.minCapacity;
+	}
+
+	@Override
+	public final synchronized long capacity()
+	{
+		return this.capacity;
+	}
+
+	@Override
+	public final synchronized long size()
+	{
+		return this.size;
+	}
+
+	@Override
+	public final synchronized boolean isEmpty()
+	{
+		return this.size == 0;
 	}
 	
-	private boolean synchCheckForDecrease()
+	@Override
+	public final synchronized boolean setHashDensity(final float hashDensity)
 	{
-		final int requiredHashLength = this.calculateRequiredHashLength(this.size);
-		if(requiredHashLength != this.internalHashLength())
+		this.internalSetHashDensity(validateHashDensity(hashDensity));
+		
+		this.internalUpdateCapacity();
+		return this.ensureCapacity(this.minCapacity);
+	}
+	
+	@Override
+	public final synchronized boolean setConfiguration(
+		final float hashDensity    ,
+		final long  minimumCapacity
+	)
+	{
+		// both values are checked before modifying any state
+		validateHashDensity(hashDensity);
+		validateCapacity(minimumCapacity);
+		
+		this.internalSetHashDensity(hashDensity);
+		this.internalSetMinimumCapacity(minimumCapacity);
+		
+		this.internalUpdateCapacity();
+		return this.ensureCapacity(minimumCapacity);
+	}
+	
+	@Override
+	public final synchronized boolean setMinimumCapacity(final long minimumCapacity)
+	{
+		this.internalSetMinimumCapacity(validateCapacity(minimumCapacity));
+		
+		this.internalUpdateCapacity();
+		return this.ensureCapacity(minimumCapacity);
+	}
+	
+	@Override
+	public final synchronized boolean ensureCapacity(final long desiredCapacity)
+	{
+		/*
+		 * Cannot use capacityHigh here, as this method is called after changing capacity-defining values.
+		 * Instead, the actual hash length is checked to determine if the tables really are too small.
+		 */
+		
+		validateCapacity(desiredCapacity);
+		final int requiredHashLength = this.calculateRequiredHashLength(desiredCapacity);
+		if(requiredHashLength > this.internalHashLength())
 		{
-			this.synchRebuild(requiredHashLength);
+			this.internalRebuild(requiredHashLength);
 			
 			return true;
 		}
@@ -590,200 +333,440 @@ public final class DefaultObjectRegistry implements PersistenceObjectRegistry
 		return false;
 	}
 
-	private static long lookupOid(final Entry[] buckets, final Object object)
+	@Override
+	public final synchronized boolean containsObjectId(final long objectId)
 	{
-		if(buckets != null)
+		for(Entry e = this.oidHashTable[(int)objectId & this.hashRange]; e != null; e = e.oidNext)
 		{
-			for(int i = 0; i < buckets.length; i++)
+			if(e.objectId == objectId)
 			{
-				if(buckets[i] != null && buckets[i].get() == object)
-				{
-					return buckets[i].objectId;
-				}
+				return true;
+			}
+		}
+		
+		return false;
+	}
+	
+	@Override
+	public final synchronized long lookupObjectId(final Object object)
+	{
+		if(object == null)
+		{
+			throw new NullPointerException();
+		}
+
+		for(Entry e = this.refHashTable[hash(object) & this.hashRange]; e != null; e = e.refNext)
+		{
+			if(e.get() == object)
+			{
+				return e.objectId;
 			}
 		}
 		
 		return Persistence.nullId();
 	}
 
-	private static Object lookupObject(final Entry[] buckets, final long oid)
+	@Override
+	public final synchronized Object lookupObject(final long objectId)
 	{
-		if(buckets != null)
+		for(Entry e = this.oidHashTable[(int)objectId & this.hashRange]; e != null; e = e.refNext)
 		{
-			for(int i = 0; i < buckets.length; i++)
+			if(e.objectId == objectId)
 			{
-				if(buckets[i] != null && buckets[i].objectId == oid)
-				{
-					return buckets[i].get();
-				}
+				return e.get();
 			}
 		}
-				
+		
 		return null;
 	}
-
-	private static boolean containsOid(final Entry[] buckets, final long oid)
+	
+	@Override
+	public final synchronized boolean registerObject(final long objectId, final Object object)
 	{
-		if(buckets != null)
+		if(object == null)
 		{
-			for(int i = 0; i < buckets.length; i++)
-			{
-				if(buckets[i] != null && buckets[i].objectId == oid)
-				{
-					return true;
-				}
-			}
+			throw new NullPointerException();
 		}
-		return false;
+		if(objectId == Persistence.nullId())
+		{
+			throw new PersistenceExceptionNullObjectId();
+		}
+
+		return this.internalAdd(objectId, object);
 	}
 
-
-	private static void validateEntryOid(final Entry entry, final long objectId, final Object object)
+	@Override
+	public final synchronized Object optionalRegisterObject(final long objectId, final Object object)
 	{
-		if(entry.objectId != objectId)
+		if(object == null)
 		{
-			throw new PersistenceExceptionConsistencyObjectId(object, entry.objectId, objectId);
+			throw new NullPointerException();
 		}
-	}
-
-	private static Entry[] synchEnlargeBuckets(final Entry[] oldBuckets, final Entry entry)
-	{
-		/* Notes:
-		 * - orphan entries are kept intentionally
-		 * - bucket length is very unlikely to grow beyond max pow2 int, so no grow length check is performed
-		 * - an increment of 4 proved to be highly efficient for reasonable hash densities.
-		 */
-		final Entry[] newBuckets;
-		System.arraycopy(oldBuckets, 0, newBuckets = new Entry[oldBuckets.length + 4], 0, oldBuckets.length);
-		newBuckets[oldBuckets.length] = entry;
-		return newBuckets;
-	}
-
-	private static boolean synchUseEmptyBucket(final Entry[] buckets, final Entry entry)
-	{
-		for(int i = 0; i < buckets.length; i++)
+		if(objectId == Persistence.nullId())
 		{
-			if(buckets[i] == null)
-			{
-				buckets[i] = entry;
-				return true;
-			}
+			throw new PersistenceExceptionNullObjectId();
 		}
-		return false;
-	}
-
-	private static void synchRemoveEntry(final Entry[] buckets, final Entry entry)
-	{
-		if(buckets == null)
-		{
-			// can happen via rebuild (e.g. clean up).
-			return;
-		}
-		for(int i = 0; i < buckets.length; i++)
-		{
-			if(buckets[i] == entry)
-			{
-				buckets[i] = null;
-				return;
-			}
-		}
-	}
-
-	private static void synchInsertEntry(final Entry[][] oidHashTable, final Entry[][] refHashTable, final Entry entry)
-	{
-		synchPutEntry(oidHashTable, (int)entry.objectId & oidHashTable.length - 1, entry);
-		synchPutEntry(refHashTable,      entry.refHash  & oidHashTable.length - 1, entry);
+		
+		return this.internalAddGet(objectId, object);
 	}
 	
-	// The parameter order significantly influences performance. Do not change.
-	private static void synchInsertEntry(
-		final Entry[][] slotsPerOid,
-		final Entry[][] slotsPerRef,
-		final Entry     entry      ,
-		final int       hashRange
-	)
+	@Override
+	public final synchronized boolean registerConstant(final long objectId, final Object constant)
 	{
-		synchPutEntry(slotsPerOid, hashRange & (int)entry.objectId, entry);
-		synchPutEntry(slotsPerRef, hashRange &      entry.refHash , entry);
-	}
-
-	private static Entry[] synchCreateNewBuckets(final Entry entry)
-	{
-		/* starting at only one bucket is a little inefficient for enlargement but pretty memory-efficient.
-		 * As the goal is to produce as few collisions as possible, single-entry buckets is the common case.
-		 */
-		return new Entry[]{entry};
-	}
-
-	private static void synchPutEntry(final Entry[][] table, final int hashIndex, final Entry entry)
-	{
-		// clean up removed empty bucket arrays to reduce memory consumption
-		if(table[hashIndex] == null)
+		if(!this.registerObject(objectId, constant))
 		{
-			// case 1: slot still empty. Create new buckets array.
-			table[hashIndex] = synchCreateNewBuckets(entry);
+			return false;
 		}
-		else if(!synchUseEmptyBucket(table[hashIndex], entry)) // case 2: buckets array still has an empty bucket.
-		{
-			// case 3: buckets array full. Enlarge and insert.
-			table[hashIndex] = synchEnlargeBuckets(table[hashIndex], entry);
-		}
+		
+		this.ensureConstantsHotRegistry().add(objectId, constant);
+		
+		return true;
 	}
 
-	private static void synchRebuildSlots(
-		final Entry[][] oldSlots      ,
-		final Entry[][] newSlotsPerOid,
-		final Entry[][] newSlotsPerRef
-	)
+	@Override
+	public final synchronized <A extends PersistenceAcceptor> A iterateEntries(final A acceptor)
 	{
-		for(int i = 0; i < oldSlots.length; i++)
+		iterateEntries(this.oidHashTable, acceptor);
+		return acceptor;
+	}
+		
+	private boolean internalAdd(final long objectId, final Object object)
+	{
+		if(this.internalAddCheck(objectId, object))
 		{
-			if(oldSlots[i] != null)
+			return false;
+		}
+
+		this.internalPutNewEntry(objectId, object);
+		return true;
+	}
+		
+	private void internalPutNewEntry(final long objectId, final Object object)
+	{
+		this.oidHashTable[(int)objectId & this.hashRange] =
+		this.refHashTable[ hash(object) & this.hashRange] =
+			new Entry(
+				objectId,
+				object,
+				this.oidHashTable[(int)objectId & this.hashRange],
+				this.refHashTable[ hash(object) & this.hashRange]
+			)
+		;
+		
+		if(++this.size >= this.capacity)
+		{
+			this.internalIncreaseStorage();
+		}
+	}
+	
+	private boolean internalAddCheck(final long objectId, final Object object)
+	{
+		for(Entry e = this.oidHashTable[(int)objectId & this.hashRange]; e != null; e = e.oidNext)
+		{
+			if(e.objectId == objectId)
 			{
-				synchRebuildBuckets(oldSlots[i], newSlotsPerOid, newSlotsPerRef);
+				return this.internalHandleExisting(object, e);
 			}
 		}
-	}
 
-	private static void synchRebuildBuckets(
-		final Entry[]   buckets       ,
-		final Entry[][] newSlotsPerOid,
-		final Entry[][] newSlotsPerRef
-	)
-	{
-		for(int i = 0; i < buckets.length; i++)
-		{
-			if(buckets[i] != null && !buckets[i].isEmpty())
-			{
-				synchInsertEntry(newSlotsPerOid, newSlotsPerRef, buckets[i]);
-			}
-		}
+		this.internalValidateObjectNotYetRegistered(objectId, object);
+		return false;
 	}
-
-	private static void iterateEntries(final Entry[][] slots, final PersistenceAcceptor acceptor)
+	
+	private Object internalAddGetCheck(final long objectId, final Object object)
 	{
-		for(int s = 0; s < slots.length; s++)
+		for(Entry e = this.oidHashTable[(int)objectId & this.hashRange]; e != null; e = e.oidNext)
 		{
-			if(slots[s] != null)
+			if(e.objectId == objectId)
 			{
-				final Entry[] buckets = slots[s];
-				for(int b = 0; b < buckets.length; b++)
+				final Object registered;
+				if((registered = e.get()) != null)
 				{
-					if(buckets[b] != null)
-					{
-						acceptor.accept(buckets[b].objectId, buckets[b].get());
-					}
+					return registered;
+				}
+
+				// orphan entry removal is always right, even in case of an error.
+				this.internalRemoveEntry(e);
+				break;
+			}
+		}
+
+		// either no hash chain yet or no (live) entry for that objectId. Validate and signal need for registration.
+		this.internalValidateObjectNotYetRegistered(objectId, object);
+		
+		return null;
+	}
+	
+	private boolean internalHandleExisting(final Object object, final Entry entry)
+	{
+		if(entry.get() == object)
+		{
+			return true;
+		}
+		
+		if(entry.get() != null)
+		{
+			throw new PersistenceExceptionConsistencyObject(entry.objectId, entry.get(), object);
+		}
+		
+		this.internalValidateObjectNotYetRegistered(entry.objectId, object);
+		this.internalRemoveEntry(entry);
+		
+		return false;
+	}
+	
+	private void internalRemoveEntry(final Entry entry)
+	{
+		removeFromOidTable(this.oidHashTable, (int)entry.objectId & this.hashRange, entry);
+		removeFromRefTable(this.refHashTable,      entry.refHash  & this.hashRange, entry);
+		this.size--;
+	}
+	
+	private static void removeFromOidTable(final Entry[] table, final int index, final Entry entry)
+	{
+		for(Entry e = table[index], last = null; e != null; e = (last = e).oidNext)
+		{
+			if(e == entry)
+			{
+				if(last == null)
+				{
+					table[index] = e.oidNext;
+				}
+				else
+				{
+					last.oidNext = e.oidNext;
 				}
 			}
 		}
 	}
+	
+	private static void removeFromRefTable(final Entry[] table, final int index, final Entry entry)
+	{
+		for(Entry e = table[index], last = null; e != null; e = (last = e).refNext)
+		{
+			if(e == entry)
+			{
+				if(last == null)
+				{
+					table[index] = e.refNext;
+				}
+				else
+				{
+					last.refNext = e.refNext;
+				}
+			}
+		}
+	}
+		
+	private void internalValidateObjectNotYetRegistered(final long objectId, final Object object)
+	{
+		final int refHash = hash(object);
+		for(Entry e = this.refHashTable[refHash & this.hashRange]; e != null; e = e.refNext)
+		{
+			if(e.refHash == refHash && e.get() == object)
+			{
+				throw new PersistenceExceptionConsistencyObjectId(object, e.objectId, objectId);
+			}
+		}
+	}
+
+	private Object internalAddGet(final long objectId, final Object object)
+	{
+		final Object alreadyRegistered;
+		if((alreadyRegistered = this.internalAddGetCheck(objectId, object)) != null)
+		{
+			return alreadyRegistered;
+		}
+
+		this.internalPutNewEntry(objectId, object);
+		return object;
+	}
+	
+	// rebuild and consolidation //
+	
+	@Override
+	public final synchronized boolean consolidate()
+	{
+		// both tables always have the same length
+		final Entry[] oidHashTable = this.oidHashTable;
+		final Entry[] refHashTable = this.refHashTable;
+		
+		int orphanCount = 0;
+		for(int h = 0; h < oidHashTable.length; h++)
+		{
+			// the primary branch (per oids) is used to determine the orphan count.
+			orphanCount += consolidateOidHashChain(oidHashTable, h);
+			
+			// the secondard branch is just updated to avoid counting the same orphan entry twice.
+			consolidateRefHashChain(refHashTable, h);
+		}
+		
+		this.size -= orphanCount;
+		
+		return this.checkForDecrease();
+	}
+	
+	private static int consolidateOidHashChain(final Entry[] oidHashTable, final int h)
+	{
+		int orphanCount = 0;
+		for(Entry e = oidHashTable[h], lastProper = null; e != null; e = e.oidNext)
+		{
+			if(e.get() != null)
+			{
+				// everything stays as it is.
+				lastProper = e;
+				continue;
+			}
+			
+			// orphaned entry is removed. The first entry in the chain is a special case to be handled.
+			if(lastProper == null)
+			{
+				oidHashTable[h] = e.oidNext;
+			}
+			else
+			{
+				lastProper.oidNext = e.oidNext;
+			}
+			orphanCount++;
+		}
+		
+		return orphanCount;
+	}
+	
+	private static void consolidateRefHashChain(final Entry[] refHashTable, final int h)
+	{
+		for(Entry e = refHashTable[h], lastProper = null; e != null; e = e.refNext)
+		{
+			if(e.get() != null)
+			{
+				// everything stays as it is.
+				lastProper = e;
+				continue;
+			}
+			
+			// orphaned entry is removed. The first entry in the chain is a special case to be handled.
+			if(lastProper == null)
+			{
+				refHashTable[h] = e.refNext;
+			}
+			else
+			{
+				lastProper.refNext = e.refNext;
+			}
+		}
+	}
+		
+	private boolean checkForDecrease()
+	{
+		final int requiredHashLength = this.calculateRequiredHashLength(this.size);
+		if(requiredHashLength != this.internalHashLength())
+		{
+			this.internalRebuild(requiredHashLength);
+			
+			return true;
+		}
+		
+		return false;
+	}
+	
+	private void internalIncreaseStorage()
+	{
+		// capacityHighBound checks prevent unnecessary / dangerous calls of this method
+		this.internalRebuild(this.oidHashTable.length << 1);
+	}
+	
+	private void internalRebuild(final int hashLength)
+	{
+		final Entry[] newOidHashTable = this.createHashTable(hashLength);
+		final Entry[] newRefHashTable = this.createHashTable(hashLength);
+
+		// orphaned entries are discarded and their total count is returned to be subtracted here.
+		this.size -= rebuildTables(this.oidHashTable, newOidHashTable, newRefHashTable);
+		
+		// the new hash tables are set as the instance's storage structure.
+		this.setHashTables(newOidHashTable, newRefHashTable);
+		
+		/*
+		 * Since rebuilding discards orphaned entries and reduces the size, it could be possible that
+		 * a rebuild to increase the storage determines that it could actually shrink.
+		 * The doubled performance cost in such cases should be well worth the automatic memory saving.
+		 */
+		this.checkForDecrease();
+		
+		// at some point, constant registration is completed, so an efficient storage form is preferable.
+		this.internalEnsureConstantsColdStorage();
+	}
+
+	private static long rebuildTables(
+		final Entry[] oldOidHashTable,
+		final Entry[] newOidHashTable,
+		final Entry[] newRefHashTable
+	)
+	{
+		final int hashRange = newOidHashTable.length - 1;
+		
+		long orphanCount = 0;
+		for(int i = 0; i < oldOidHashTable.length; i++)
+		{
+			if(oldOidHashTable[i] == null)
+			{
+				continue;
+			}
+
+			orphanCount += rebuildEntryChain(oldOidHashTable[i], hashRange, newOidHashTable, newRefHashTable);
+		}
+		
+		return orphanCount;
+	}
+
+	private static int rebuildEntryChain(
+		final Entry   firstOidHashEntry,
+		final int     hashRange        ,
+		final Entry[] newOidHashTable  ,
+		final Entry[] newRefHashTable
+	)
+	{
+		int orphanCount = 0;
+		Entry e = firstOidHashEntry, next;
+		do
+		{
+			next = e.oidNext;
+			if(e.get() != null)
+			{
+				e.oidNext = newOidHashTable[(int)e.objectId & hashRange];
+				e.refNext = newRefHashTable[     e.refHash  & hashRange];
+				newOidHashTable[(int)e.objectId & hashRange] = e;
+				newRefHashTable[     e.refHash  & hashRange] = e;
+			}
+			else
+			{
+				orphanCount++;
+			}
+		}
+		while((e = next) != null);
+		
+		return orphanCount;
+	}
+
+	private static void iterateEntries(final Entry[] oidHashTable, final PersistenceAcceptor acceptor)
+	{
+		for(int s = 0; s < oidHashTable.length; s++)
+		{
+			for(Entry e = oidHashTable[s]; e != null; e = e.oidNext)
+			{
+				acceptor.accept(e.objectId, e.get());
+			}
+		}
+	}
+	
+	// clearing //
 	
 	@Override
 	public final synchronized void clear()
 	{
-		this.synchEnsureConstantsColdStorage();
+		this.internalEnsureConstantsColdStorage();
 		this.internalClear();
-		this.reregisterConstants();
+		this.internalReregisterConstants();
 	}
 	
 	@Override
@@ -794,10 +777,9 @@ public final class DefaultObjectRegistry implements PersistenceObjectRegistry
 	
 	private void internalClear()
 	{
-		final Entry[][]
-			oidBuckets = this.oidHashTable,
-			refBuckets = this.refHashTable
-		;
+		final Entry[] oidBuckets = this.oidHashTable;
+		final Entry[] refBuckets = this.refHashTable;
+		
 		for(int i = 0; i < oidBuckets.length; i++)
 		{
 			oidBuckets[i] = refBuckets[i] = null;
@@ -810,11 +792,11 @@ public final class DefaultObjectRegistry implements PersistenceObjectRegistry
 	public final synchronized void truncate()
 	{
 		// reinitialize storage strucuture with at least enough capacity for the incoming constants.
-		this.synchEnsureConstantsColdStorage();
+		this.internalEnsureConstantsColdStorage();
 		
 		this.internalReset(Math.max(this.constantsColdStorageObjects.length, this.minCapacity));
 		
-		this.reregisterConstants();
+		this.internalReregisterConstants();
 	}
 	
 	@Override
@@ -823,14 +805,10 @@ public final class DefaultObjectRegistry implements PersistenceObjectRegistry
 		// hash table reset, no constants reregistering.
 		this.internalReset();
 	}
-
-	@Override
-	public final synchronized boolean containsObjectId(final long oid)
-	{
-		return containsOid(this.oidHashTable[(int)oid & this.hashRange], oid);
-	}
 	
-	private void reregisterConstants()
+	// Constants logic //
+	
+	private void internalReregisterConstants()
 	{
 		final Object[] constantsObjects = this.constantsColdStorageObjects;
 		final long[] constantsObjectIds = this.constantsColdStorageObjectIds;
@@ -841,137 +819,18 @@ public final class DefaultObjectRegistry implements PersistenceObjectRegistry
 			this.registerObject(constantsObjectIds[i], constantsObjects[i]);
 		}
 	}
-
-	@Override
-	public final synchronized long lookupObjectId(final Object object)
-	{
-		if(object == null)
-		{
-			throw new NullPointerException();
-		}
-		
-		return lookupOid(this.refHashTable[identityHashCode(object) & this.hashRange], object);
-	}
-
-	@Override
-	public final synchronized Object lookupObject(final long oid)
-	{
-		return lookupObject(this.oidHashTable[(int)oid & this.hashRange], oid);
-	}
-
-	@Override
-	public final boolean registerObject(final long oid, final Object object)
-	{
-		if(object == null)
-		{
-			throw new NullPointerException();
-		}
-		if(oid == Persistence.nullId())
-		{
-			throw new PersistenceExceptionNullObjectId();
-		}
-
-		return this.synchronizedAdd(oid, object);
-	}
-
-	@Override
-	public Object optionalRegisterObject(final long oid, final Object object)
-	{
-		if(object == null)
-		{
-			throw new NullPointerException();
-		}
-		if(oid == Persistence.nullId())
-		{
-			throw new PersistenceExceptionNullObjectId();
-		}
-		
-		return this.synchronizedAddGet(oid, object);
-	}
 	
-	@Override
-	public final synchronized boolean registerConstant(final long objectId, final Object constant)
-	{
-		if(!this.registerObject(objectId, constant))
-		{
-			return false;
-		}
-		
-		this.synchEnsureConstantsHotRegistry().add(objectId, constant);
-		
-		return true;
-	}
-
-	public final synchronized boolean removeObjectById(final long id)
-	{
-		if(id == Persistence.nullId())
-		{
-			return false;
-		}
-		
-		final Entry[] oidBuckets;
-		if((oidBuckets = this.oidHashTable[(int)id & this.hashRange]) != null)
-		{
-			for(int i = 0; i < oidBuckets.length; i++)
-			{
-				if(oidBuckets[i] != null && oidBuckets[i].objectId == id)
-				{
-					synchRemoveEntry(this.refHashTable[oidBuckets[i].refHash & this.hashRange], oidBuckets[i]);
-					oidBuckets[i] = null;
-					this.size--;
-					return true;
-				}
-			}
-		}
-		
-		return false;
-	}
-
-	public final synchronized boolean removeObject(final Object object)
-	{
-		if(object == null)
-		{
-			return false;
-		}
-		
-		final Entry[] refBuckets;
-		if((refBuckets = this.refHashTable[identityHashCode(object) & this.hashRange]) != null)
-		{
-			for(int i = 0; i < refBuckets.length; i++)
-			{
-				if(refBuckets[i] != null && refBuckets[i].get() == object)
-				{
-					synchRemoveEntry(this.oidHashTable[(int)refBuckets[i].objectId & this.hashRange], refBuckets[i]);
-					refBuckets[i] = null;
-					this.size--;
-					return true;
-				}
-			}
-		}
-		
-		return false;
-	}
-
-	@Override
-	public final synchronized <A extends PersistenceAcceptor> A iterateEntries(final A acceptor)
-	{
-		iterateEntries(this.oidHashTable, acceptor);
-		return acceptor;
-	}
-	
-	// Constants logic //
-	
-	private EqHashTable<Long, Object> synchEnsureConstantsHotRegistry()
+	private EqHashTable<Long, Object> ensureConstantsHotRegistry()
 	{
 		if(this.constantsHotRegistry == null)
 		{
-			this.synchBuildConstantsHotRegistry();
+			this.internalBuildConstantsHotRegistry();
 		}
 		
 		return this.constantsHotRegistry;
 	}
 	
-	private void synchBuildConstantsHotRegistry()
+	private void internalBuildConstantsHotRegistry()
 	{
 		final EqHashTable<Long, Object> constantsHotRegistry = EqHashTable.New();
 		
@@ -989,17 +848,17 @@ public final class DefaultObjectRegistry implements PersistenceObjectRegistry
 		this.constantsColdStorageObjectIds = null;
 	}
 	
-	private void synchEnsureConstantsColdStorage()
+	private void internalEnsureConstantsColdStorage()
 	{
 		if(this.constantsColdStorageObjects != null)
 		{
 			return;
 		}
 		
-		this.synchBuildConstantsColdStorage();
+		this.internalBuildConstantsColdStorage();
 	}
 	
-	private void synchBuildConstantsColdStorage()
+	private void internalBuildConstantsColdStorage()
 	{
 		final EqHashTable<Long, Object> constantsHotRegistry = this.constantsHotRegistry;
 		
@@ -1025,20 +884,19 @@ public final class DefaultObjectRegistry implements PersistenceObjectRegistry
 	public final synchronized XGettingTable<String, HashStatisticsBucketBased> createHashStatistics()
 	{
 		return EqHashTable.New(
-			KeyValue("PerObjectIds", this.synchCreateHashStatisticsOids()),
-			KeyValue("PerObjects", this.synchCreateHashStatisticsRefs())
+			KeyValue("PerObjectIds", this.internalCreateHashStatisticsOids()),
+			KeyValue("PerObjects", this.internalCreateHashStatisticsRefs())
 		);
 	}
 	
-	private HashStatisticsBucketBased synchCreateHashStatisticsOids()
+	private HashStatisticsBucketBased internalCreateHashStatisticsOids()
 	{
 		final EqHashTable<Long, Long> distributionTable = EqHashTable.New();
 		
-		final Entry[][] oidHashTable = this.oidHashTable;
+		final Entry[] oidHashTable = this.oidHashTable;
 		for(int h = 0; h < oidHashTable.length; h++)
 		{
-			final Entry[] bucket = oidHashTable[h];
-			final Long bucketLength = countEntries(bucket);
+			final Long bucketLength = countOidChainLength(oidHashTable[h]);
 			registerDistribution(distributionTable, bucketLength);
 		}
 		complete(distributionTable);
@@ -1052,15 +910,14 @@ public final class DefaultObjectRegistry implements PersistenceObjectRegistry
 		);
 	}
 
-	private HashStatisticsBucketBased synchCreateHashStatisticsRefs()
+	private HashStatisticsBucketBased internalCreateHashStatisticsRefs()
 	{
 		final EqHashTable<Long, Long> distributionTable = EqHashTable.New();
 
-		final Entry[][] refHashTable = this.refHashTable;
+		final Entry[] refHashTable = this.refHashTable;
 		for(int h = 0; h < refHashTable.length; h++)
 		{
-			final Entry[] bucket = refHashTable[h];
-			final Long bucketLength = countEntries(bucket);
+			final Long bucketLength = countRefChainLength(refHashTable[h]);
 			registerDistribution(distributionTable, bucketLength);
 		}
 		complete(distributionTable);
@@ -1074,12 +931,26 @@ public final class DefaultObjectRegistry implements PersistenceObjectRegistry
 		);
 	}
 	
-	private static Long countEntries(final Entry[] bucket)
+	private static Long countOidChainLength(final Entry firstEntry)
 	{
 		long count = 0;
-		for(int i = bucket.length; --i >= 0;)
+		for(Entry e = firstEntry; e != null; e = e.oidNext)
 		{
-			if(bucket[i] != null && !bucket[i].isEmpty())
+			if(e.get() != null)
+			{
+				count++;
+			}
+		}
+		
+		return count;
+	}
+	
+	private static Long countRefChainLength(final Entry firstEntry)
+	{
+		long count = 0;
+		for(Entry e = firstEntry; e != null; e = e.refNext)
+		{
+			if(e.get() != null)
 			{
 				count++;
 			}
@@ -1108,7 +979,6 @@ public final class DefaultObjectRegistry implements PersistenceObjectRegistry
 		final Long highest = distributionTable.last().key();
 		final Long zero = 0L;
 		
-		distributionTable.add(null, zero);
 		for(long l = 0; l < highest; l++)
 		{
 			distributionTable.add(l, zero);
@@ -1123,7 +993,7 @@ public final class DefaultObjectRegistry implements PersistenceObjectRegistry
 	// member types     //
 	/////////////////////
 
-	private static final class Entry extends WeakReference<Object>
+	static final class Entry extends WeakReference<Object>
 	{
 		///////////////////////////////////////////////////////////////////////////
 		// instance fields //
@@ -1131,6 +1001,8 @@ public final class DefaultObjectRegistry implements PersistenceObjectRegistry
 		
 		final long objectId;
 		      int  refHash ;
+		      Entry oidNext;
+		      Entry refNext;
 
 		      
 		
@@ -1138,24 +1010,26 @@ public final class DefaultObjectRegistry implements PersistenceObjectRegistry
 		// constructors //
 		/////////////////
 		
-		Entry(final long objectId, final Object referent)
+		Entry(final long objectId, final Object referent, final Entry oidNext, final Entry refnext)
 		{
 			super(referent);
 			this.objectId = objectId;
-			this.refHash  = System.identityHashCode(referent);
+			this.refHash  = hash(referent);
+			this.oidNext  = oidNext;
+			this.refNext  = refnext;
 		}
 		
-		
-		
-		///////////////////////////////////////////////////////////////////////////
-		// methods //
-		////////////
-		
-		final boolean isEmpty()
-		{
-			return this.get() == null;
-		}
-
+	}
+	
+	
+	///////////////////////////////////////////////////////////////////////////
+	// main method //
+	////////////////
+	
+	public static final void printEntryInstanceSizeInfo()
+	{
+		// -XX:-UseCompressedOops -XX:+PrintGC
+		XDebug.printInstanceSizeInfo(Entry.class);
 	}
 
 }
